# smart-speaker

./: .dockerignore  .env.local  .gitignore  LICENSE  README.md  compose.yaml
akane/: Cargo.toml  run.py
akane/src/: kotonoha_client.rs  main.rs
kotonoha/: Dockerfile  main.ts  main_test.ts
kotonoha/skills/: timer.ts  timer_test.ts
