[package]
name = "akane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
anyhow = { version = "1.0.82", features = ["std", "backtrace"] }
async-trait = "0.1.80"
mockall = "0.12.1"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "std",
    "json",
    "env-filter",
] }
encoding_rs = "0.8.34"
